deployment/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: enterprise-web-app
  template:
    metadata:
      labels:
        app: enterprise-web-app
    spec:
      containers:
        - name: enterprise-web-app
          image: opeyemimomodu/enterprise-web-app
          ports:
            - containerPort: 8080
      restartPolicy: Always
