deployment/k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-web-app
spec:
  selector:
    app: enterprise-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
#      targetPort: 5000
  type: LoadBalancer
